--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body,html {
     height: 10%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .logo {
@@ -48,8 +49,8 @@ body,html {
 .signin-container {
     display: flex;
     align-items: center;
-    margin-left: 60%;
     gap: 8px;
+    margin-right: 5%;
 }
 
 .signin-button { 
