--- a/style.css
+++ b/style.css
@@ -121,8 +121,7 @@ body,html {
     background: #191C1F;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 20%;
+    justify-content: space-around;
 }
 
 .desc-img {
@@ -186,8 +185,7 @@ body,html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 100px;
+    justify-content: space-around;
 }
 
 .logo2 {
